# stepwise-transformers

./: .gitignore  README.md  SETUP.md  __init__.py  experiment_manager.py  main.py  pyproject.toml  requirements.txt  run_experiment.py  train.py  transformer_manager.py
.cursor/rules/: clearml-experiment-guide.md  coding-style.mdc  debugging-and-testing.mdc  learning-progression.mdc  mlflow-experiment-guide.mdc  project-overview.mdc  python-coding-standards.mdc  textual-tui-guide.mdc  transformer-implementation-guide.mdc
components/: __init__.py  attention.py  base.py  positional_encoding.py  transformer_block.py
config/: __init__.py  default_config.json  default_config.yaml
config/hydra/: config.yaml
config/hydra/overrides/: __init__.py  development.yaml  production.yaml
config/model_configs/: __init__.py  medium_transformer.yaml  small_transformer.yaml
experiments/: __init__.py  attention.py  base.py  positional_encoding.py  transformer_block.py
mlruns/0/: meta.yaml
src/: __init__.py  main.py  train.py
src/components/: __init__.py  attention.py  feed_forward.py  positional_encoding.py
src/models/: __init__.py  transformer.py  transformer_layers.py
src/utils/: clearml_utils.py  data_utils.py
stepwise_transformers/: __init__.py
stepwise_transformers/attention/: __init__.py  multi_head.py  scaled_dot_product.py
stepwise_transformers/feed_forward/: __init__.py  gated.py  position_wise.py
stepwise_transformers/layers/: __init__.py  decoder.py  encoder.py
stepwise_transformers/models/: __init__.py  transformer.py
stepwise_transformers/positional_encoding/: __init__.py  learned.py  sinusoidal.py
stepwise_transformers/training/: __init__.py
stepwise_transformers/utils/: __init__.py  clearml_tracker.py  data_processor.py
(+2 files in other folders)
