[project]
name = "stepwise-transformers"
version = "0.1.0"
description = "Interactive transformer learning with ClearML, Hydra, Optuna, and TensorBoard"
authors = [{ name = "Stepwise Transformers" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

# Core runtime dependencies
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "torchaudio>=2.3",
    "clearml>=1.16",
    "hydra-core>=1.3",
    "optuna>=3.5",
    "tensorboard>=2.16",
    "numpy>=1.26",
    "seaborn>=0.13",
    "plotly>=5.22",
    "rich>=13.7",
    "typer>=0.12",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "stepwise_transformers*",
    "config*",
    "examples*",
    "optimization*",
    "visualization*",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100
